bluegreendeployment/green/my-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: green
spec:
  selector:
    app: myapp
    version: green
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
